fixed calendar layout issue

--- a/Home/css/profile.css
+++ b/Home/css/profile.css
@@ -116,17 +116,7 @@ table th {
   text-align:center;
 }
 
-#calendarSection {
-	width: 100%;
-	height: 800px;
-	position: relative;
-  /* background: linear-gradient(45deg, #6ac1c5, #bda5ff); */
-}
-
 #calendar {
 	width: 100%;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	position: relative;
 }
